# HuangxinDong.github.io

./: .gitignore  .lycheereignore  404.md  Formatter.hs  LICENSE  README.md  about.md  hakyll-blog.cabal  index.html  projects.md  robots.txt  site.hs
.github/workflows/: deploy.yml  qa.yml
assets/css/: custom.css
assets/files/: ob-comment-rendering-style.css  ob-faded-emoji-in-task.css  ob-heading-indicators.css  zshrc.txt
assets/scss/: custom.scss
config/_default/: hugo.toml  languages.en.toml  languages.zh-cn.toml  markup.toml  menus.en.toml  menus.zh-cn.toml  params.toml
content/: _index.en.md  _index.md  about_cn.md
content/about/: index.en.md  index.md
content/categories/: _index.en.md  _index.md
content/posts/: Course in General Linguistics1.md  NLPsum.md  PlanescapeTorment.md  The Longing.md  _index.en.md  _index.md  _index.zh-cn.md  linguistics-booklist.md  macOS 实用工具.md  macOS 实用工具.zh-cn.md  markdown.md  minecraft.md
content/readings/: Franny and Zooey.md  Hidden Valley Road.md  If on a winter's night a traveler.md  In Cold Blood.md  Nine Stories.md  Raise High the Roof Beam.md  Runaway.md  The Sound and the Fury.md  _index.md  假面的告白.md  孽子.md  梦中的欢快葬礼和十二个异乡故事.md  玩笑.md  疼痛部.md  素食者.md  金阁寺.md  鳄鱼手记.md
css/: base.css  components.css  default.css  layout.css  post.css  records.css
favicon/: site.webmanifest
filters/: bilingual.lua  highlight.lua  obsidian-callouts.lua
i18n/: zh-CN.yaml
js/: bilingual.js  copy-code.js  nav.js  records.js  sw.js  toc.js
pages/: about.md  index.html  projects.md
posts/: 3b1b Calculus Series.md  3b1b Calculus Series笔记.md  A Guide to Retro Gaming.md  Disco Elysium.md  Fixing My Zsh Setup.md  Free software movement and Communism.md  GDScript.md  Grim Fandango.md  Making of this blog.md  Minecraft.md  My Hardware.md  My Obsidian Setup.md  My macOS Setup.md  Pandoc.md  macOS Setup.md
public/: 404.html  index.html  index.json  index.xml  sitemap.xml
src/: site.hs
templates/: default.html  douban-category.html  douban-index.html  douban-overview-card.html  douban-record-item.html  page.html  post-card-list.html  post-list-page.html  post-list.html  post.html  series-list.html  sitemap.xml  tag.html
(+145 files in other folders)
