name:               hakyll-blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.16.*
                  , filepath
                  , pandoc
                  , directory
                  , time
                  , mtl
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

executable formatter
  main-is:          Formatter.hs
  build-depends:    base == 4.*
                  , directory
                  , filepath
                  , text
                  , containers
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
