name:               hakyll-blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  hs-source-dirs:   src
  other-modules:    Douban.Records
                  , Douban.UI
                  , Site.Pandoc.Callouts
                  , Site.Utils
  build-depends:    base == 4.*
                  , hakyll == 4.16.*
                  , filepath
                  , directory
                  , time
                  , mtl
                  , network-uri
                  , pandoc
                  , pandoc-types
                  , text
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

executable formatter
  main-is:          Formatter.hs
  hs-source-dirs:   src
  build-depends:    base == 4.*
                  , directory
                  , filepath
                  , text
                  , containers
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

executable douban-import-check
  main-is:          Douban/ImportCheck.hs
  hs-source-dirs:   src
  other-modules:    Douban.Records
  build-depends:    base == 4.*
                  , filepath
                  , directory
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
